--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>The Shopping Centre</title>
 
     <script
-    src="https://kit.fontawesome.com/d621e7254e.js"
-    crossorigin="anonymous"
-  ></script>
-  
+      src="https://kit.fontawesome.com/d621e7254e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
